--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
 description = "A fast tree command with gitignore support and flexible filtering"
 readme = "README.md"
-homepage = "https://github.com/yourusername/treee"
-repository = "https://github.com/yourusername/treee"
+homepage = "https://github.com/Latias94/treee"
+repository = "https://github.com/Latias94/treee"
 license = "MIT"
 keywords = ["tree", "directory", "gitignore", "cli", "filesystem"]
 categories = ["command-line-utilities", "filesystem"]
