--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,8 @@ anyhow = "1.0"
 atty = "0.2"
 glob = "0.3"
 regex = "1.0"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
